Fixing styling on filter for tags to stop overflow

--- a/react-vite/src/components/ProductBrowser/ProductBrowser.css
+++ b/react-vite/src/components/ProductBrowser/ProductBrowser.css
@@ -121,7 +121,7 @@
     padding: 5px;
     border: 5px solid;
     width: 235px;
-    height: 430px;
+    height: 450px;
     background-color: rgb(225, 225, 225);
     border-radius: 2rem;
 }
